--- a/q9.yaml
+++ b/q9.yaml
@@ -1,1 +1,8 @@
-
+apiVersion: v1
+kind: Pod
+metadata:
+  name: temp-bus
+  namespace: finance-shachar
+spec:
+  containers:
+    image: redis:alpine
